--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 /* these colors are mostly used, so declared as global variables to use whenever required */
 body{
   --twitter-color: #50b7f5;
-  --twitter-background: #e6ecf0;
+  --twitter-background:  ${({ theme }) => theme.bg};
+  --twitter-text:${({ theme }) => theme.text};
+  padding: 0;
+  margin: 0;
+  width: 100vw;
 }
 .app {
   display: flex;
@@ -11,5 +15,6 @@ body{
   margin-left: auto;
   margin-right: auto;
   padding: 0 10px;
-  
+  background-color:var(--twitter-background) !important;
+  color: var(--twitter-text) !important;
 }
