--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -2,6 +2,7 @@
   padding-bottom: 10px;
   border-bottom: 8px solid var(--twitter-background);
   padding-right: 10px;
+  background-color:inherit;
 }
 
 .tweetBox > form {
@@ -12,6 +13,7 @@
 .tweetBox__input {
   padding: 20px;
   display: flex;
+  background-color:inherit;
 }
 
 .tweetBox__input > input {
@@ -19,11 +21,13 @@
   margin-left: 20px;
   font-size: 20px;
   border: none;
+  background-color:inherit;
 }
 
 .tweetBox__imageInput {
   border: none;
   padding: 10px;
+  background-color:inherit;
 }
 /* same style as Tweet button in sidebar */
 .tweetBox__tweetButton {
@@ -41,6 +45,7 @@
   align-items: center;
   justify-content: center;
 }
+
 
 .inputbox{
   display: flex;
